tests/checker/bad/remote_read_non_address.scilla
scilla_version 0

library TLib

let x : ByStr20 = 0x3620c286757a29985cee194eb90064270fb65414

contract T ()

transition F ()
  xfx <-& x._balance
end